tests/sumo/basic/tls/NEMA/errors/1_ignore/output.sumo
Loading net-file from 'net.net.xml' ... done (71ms).
Loading additional-files from 'input_additional.add.xml' ... 
done (13ms).
Loading additional-files from 'input_additional2.add.xml' ... done (25ms).
Loading done.
Simulation version v1_12_0+0110-253dc0063ec started with time: 0.00
Simulation ended at time: 500.00
Reason: The final simulation step has been reached.
Performance: 
 Duration: 8.55s
 Real time factor: 58.4659
 UPS: 3023.269411
Vehicles: 
 Inserted: 422 (Loaded: 423)
 Running: 68
 Waiting: 1
Statistics (avg):
 RouteLength: 362.73
 Speed: 7.63
 Duration: 61.44
 WaitingTime: 24.62
 TimeLoss: 42.43
 DepartDelay: 0.94

